<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <Button
        android:id="@+id/RaSetDateBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style_2"
        android:text="@string/btnSetDate"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/RaVguideline1"
        app:layout_constraintTop_toBottomOf="@+id/RaDisplayDateTv" />

    <Button
        android:id="@+id/RaInputScrRegistDataBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_style_1"
        android:text="@string/btnRegistData"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/RaVguideline1"
        app:layout_constraintTop_toBottomOf="@+id/RaSetDateBtn" />

    <EditText
        android:id="@+id/RaInputContentEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RaVguideline1"
        app:layout_constraintTop_toBottomOf="@+id/RaErrorInputContentTv" />

    <EditText
        android:id="@+id/RaInputPriceEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RaVguideline1"
        app:layout_constraintTop_toBottomOf="@+id/RaErrorInputPriceTv"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/MaImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/RaHguideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/header_xxxhdpi_1280" />

    <TextView
        android:id="@+id/RaInputPriceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrice"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/RaInputPriceEt"
        app:layout_constraintEnd_toStartOf="@+id/RaInputPriceEt" />

    <TextView
        android:id="@+id/RaInputContentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvContent"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/RaInputContentEt"
        app:layout_constraintEnd_toStartOf="@+id/RaInputContentEt" />

    <TextView
        android:id="@+id/RaInputDateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDate"
        app:layout_constraintBaseline_toBaselineOf="@+id/RaDisplayDateTv"
        app:layout_constraintEnd_toStartOf="@+id/RaVguideline1" />

    <TextView
        android:id="@+id/RaDisplayDateTv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/RaVguideline1"
        app:layout_constraintTop_toBottomOf="@+id/RaErrorInputDateTv" />

    <TextView
        android:id="@+id/RaErrorInputContentTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RaVguideline1"
        app:layout_constraintTop_toTopOf="@+id/RaHguideline1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/RaErrorInputPriceTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RaVguideline1"
        app:layout_constraintTop_toTopOf="@+id/RaHguideline2" />

    <TextView
        android:id="@+id/RaErrorInputDateTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/RaDisplayDateTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RaVguideline1"
        app:layout_constraintTop_toTopOf="@+id/RaHguideline3"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RaVguideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RaHguideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="85dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RaHguideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="149dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RaHguideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="213dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RaHguideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

</androidx.constraintlayout.widget.ConstraintLayout>