<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/btnexStart"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/btnexLeft"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/btnexRight"
                android:textSize="18sp"
                android:visibility="invisible" />

        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
            android:id="@+id/linearLayout2"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/constantlayoutl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/progresspic"
                    android:layout_width="470dp"
                    android:layout_height="370dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="330dp"
                    android:layout_marginTop="190dp"
                    android:max="47"
                    android:minWidth="370dp"
                    android:progress="10"
                    android:rotation="270" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/constantlayoutr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/progressBarr"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/progresspicr"
                    android:layout_width="470dp"
                    android:layout_height="370dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="-50dp"
                    android:layout_marginTop="190dp"
                    android:max="47"
                    android:minWidth="370dp"
                    android:progress="10"
                    android:rotation="270" />
            </FrameLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
        <FrameLayout
            android:id="@+id/sample_content_fragment"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2" />


    </LinearLayout>



</LinearLayout>